--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BROWSERSTACK_USERNAME=rahulpanchal_7wZ5Tq
 BROWSERSTACK_ACCESS_KEY=FMvn2g8sLLqzrrz3Rs6z
 BROWSERSTACK_APP_ID=bs://fd1dbe1c7c9c8b1956f1f31bd38d59c96ef9b3f1
+DATABASE_URL=mysql+pymysql://root:Rahul%40009@localhost/QualGent
